k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: microservices
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
  type: LoadBalancer
